# task-tracker-python

./: pyproject.toml
task_cli/: __main__.py
task_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
