[project]
name = "task-cli"
version = "0.1.0"
description = "CLI para gestionar tareas"
authors = [{ name = "NicolasV" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "typer[all]",
  "tabulate"
]

[project.scripts]
task = "task_cli.__main__:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
